@@ -314,6 +314,9 @@ public class SplineMode implements UpdateMode {
         return splineMode;
     }
 
+    public void finish( Body body ) {
+    }
+
     public void setSpline( AbstractSpline spline ) {
         this.spline = spline;
     }
